syntax ="proto3";

package calculator;

option go_package="/calculatorpb";

message SumRequest {
    // *1,2* is the numerical order
    // based on the position to parse the request
    int32 num1 = 1;
    int32 num2 = 2;
}

message SumResponse {
    int32 result = 1;
}

message PNDRequest {
    int32 number = 1;
}

message PNDResponse {
    int32 result = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {}
    rpc PrimeNumberDecomposition(PNDRequest) returns (stream PNDResponse) {}
}